# agentic-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: actions.py  analysis.py  audio.py  auth.py  meetings.py
backend/app/auth/: __init__.py  jwt_handler.py  middleware.py  oauth_provider.py  provider.py  simple_provider.py
backend/app/db/: mongodb.py
backend/app/models/: __init__.py  _common.py  audit_event.py  meeting.py  meeting_item.py  proposed_action.py
backend/app/repositories/: audit_event_repo.py  base.py  meeting_item_repo.py  meeting_repo.py  proposed_action_repo.py
backend/app/services/: action_policy.py  temporal_client.py  upload_policy.py
backend/tests/: test_action_policy.py  test_action_routes.py  test_app_imports.py  test_auth_routes.py  test_meeting_routes.py  test_upload_policy.py
docs/: agentic-meeting-events.md  api.md  architecture.md  setup.md  tool-integrations.md
features/: README.md  _template.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
whisper/: Dockerfile  requirements.txt  server.py
worker/: Dockerfile  config.py  pyproject.toml  run_worker.py
worker/activities/: __init__.py  _llm.py  meeting_analysis.py  storage.py  summarization.py  tools.py  transcription.py
worker/tests/: test_meeting_analysis.py  test_tools.py
worker/workflows/: __init__.py  meeting_processing.py
(+14 files in other folders)
