[project]
name = "iwasist-backend"
version = "0.1.0"
description = "Meeting Assistant - FastAPI backend"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.35",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "motor>=3.6,<4",
    "pymongo>=4.9,<5",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "python-dotenv>=1.0,<2",
    "temporalio>=1.8,<2",
    "httpx>=0.27,<1",
    "aiofiles>=24.1,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
