[project]
name = "iwasist-worker"
version = "0.1.0"
description = "Meeting Assistant - Temporal worker"
requires-python = ">=3.11,<4.0"
dependencies = [
    "temporalio>=1.8,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "motor>=3.6,<4",
    "pymongo>=4.9,<5",
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workflows", "activities"]
